Adding export to excel feature

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "recharts": "https://esm.sh/recharts@^3.0.0",
     "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.4.168",
-    "@google/genai": "https://esm.sh/@google/genai"
+    "@google/genai": "https://esm.sh/@google/genai",
+    "xlsx": "https://esm.sh/xlsx@^0.18.5"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-neutral">
   <div id="root"></div>
